Basic Ping Response Correction of Dockerfile

--- a/docker/images/python/Dockerfile
+++ b/docker/images/python/Dockerfile
@@ -17,6 +17,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN mkdir /data
 
 ENTRYPOINT if [ $USE_DEV_MODE = true ]; \
-    then nodemon --legacy-watch --exec python -u main.py $SITE; \
-    else python -u main.py $SITE; \
+    then nodemon --legacy-watch --exec python -u main.py; \
+    else python -u main.py; \
     fi
