--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     ports:
       - "5444:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -h localhost -p 5432 -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 30
 
   rpc-server:
     container_name: is-rpc-server
