--- a/docker/images/db/xml_db/Dockerfile
+++ b/docker/images/db/xml_db/Dockerfile
@@ -2,8 +2,8 @@ FROM postgres:9.6.5
 
 ENV POSTGRES_USER=is
 ENV POSTGRES_PASSWORD=is
-ENV POSTGRES_DB=is
+ENV POSTGRES_DB=is_xml
 
 COPY schema.sql /docker-entrypoint-initdb.d/
 
-EXPOSE 5444
+EXPOSE 1
